<resources>
    <string name="app_name">Project Ideas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset_password">Reset Password </string>
    <string name="no_account">You have no account ? SignUp</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="welcome">Save your awesome Project Ideas you plan to Develop !!</string>
    <string name="logout">Logout</string>
    <string name="user_setting">User Setting</string>
    <string name="view_ideas">Record Your Ideas!!</string>
    <string name="description">Description</string>
    <string name="save_project_idea">Save Project Idea</string>
    <string name="update_project_idea">Update Project Idea</string>
    <string name="project_title">Project Title</string>
    <string name="profile">Profile</string>
    <string name="add_idea">Add Idea</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>