<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Idea">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/project_title" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine "
            android:hint="@string/description"
            />

        <Button
            android:id="@+id/button_addIdea"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:padding="12sp"
            android:background="@drawable/rounded_button"
            android:text="@string/save_project_idea" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>