<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:layout_margin="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/textView_Title"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="characters"
            android:text="@string/title"
            android:textAllCaps="false"
            android:textColor="#0C0C0C"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Description"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textColor="#0C0C0C"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7sp"
        >

        <TextView
            android:id="@+id/textView_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="#9C27B0"
            android:textSize="12sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/image_edit"
            android:background="@drawable/shape_border"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="13dp"
            app:srcCompat="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/image_delete"
            android:background="@drawable/shape_border"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/ic_delete" />



    </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>